tests/baselines/reference/isolatedDeclarationsAllowJs.errors.txt
error TS5053: Option 'allowJs' cannot be specified with option 'isolatedDeclarations'.
error TS5055: Cannot write file 'tests/cases/compiler/file2.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
tests/cases/compiler/file1.ts(1,12): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.


!!! error TS5053: Option 'allowJs' cannot be specified with option 'isolatedDeclarations'.
!!! error TS5055: Cannot write file 'tests/cases/compiler/file2.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== tests/cases/compiler/file1.ts (1 errors) ====
    export var x;
               ~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 tests/cases/compiler/file1.ts:1:12: Add a type annotation to the variable x.
==== tests/cases/compiler/file2.js (0 errors) ====
    export var y;